syntax = "proto3";

package stream.topology;

import "github.com/rancher/opni/pkg/apis/core/v1/core.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/rancher/opni/plugins/topology/apis/stream";

service RemoteTopology {
  rpc Push(Payload) returns (google.protobuf.Empty);
  rpc SyncTopology(Payload) returns (google.protobuf.Empty);
}

message Payload {
  TopologyGraph graph = 1;
}

//FIXME: copied from orchestrator.proto due to duplicate symbol bug
message TopologyGraph {
  core.Reference clusterId = 1;
  bytes          data      = 2;
  GraphRepr      repr      = 3;
}

enum GraphRepr {
  None         = 0;
  KubectlGraph = 1;
}
